@@ -17,6 +17,7 @@ __import__('errors', globals=globals(), level=1)
 __import__('main', globals=globals(), level=1)
 __import__('wizard', globals=globals(), level=1)
 __import__('files', globals=globals(), level=1)
+__import__('connection', globals=globals(), level=1)
 
 
 def init(daemon):
